--- a/sum5.html
+++ b/sum5.html
@@ -48,7 +48,7 @@
 								<h3>Main Idea</h3>
 
 								<p>
-									&emsp; Video is tiled as encoded in HEVC/H.265 which enables multiple different quality representations. MPREG-DASH SRD describes the tile structure of video segments which allow clients to request tiles for certain qualities conditional on the user’s current FOV. There are 3 different proposed strategies for reducing bandwidth: high quality tiles within FOV and low quality tiles outside (full), high quality tiles within current FOV and low quality tiles outside with medium quality tiles within predicted FOV outside current FOV (full advanced), and high quality tiles within FOV and blank tiles outside (partial delivery).
+									&emsp; Video is tiled as encoded in HEVC/H.265 which enables multiple different quality representations. MPEG-DASH SRD describes the tile structure of video segments which allow clients to request tiles for certain qualities conditional on the user’s current FOV. There are 3 different proposed strategies for reducing bandwidth: high quality tiles within FOV and low quality tiles outside (full), high quality tiles within current FOV and low quality tiles outside with medium quality tiles within predicted FOV outside current FOV (full advanced), and high quality tiles within FOV and blank tiles outside (partial delivery).
 								</p>
 
 								<h3>Major Strengths</h3>
