summaries added to index

--- a/index.html
+++ b/index.html
@@ -87,6 +87,28 @@
 										<li><a href="about.html" class="button">Read More</a></li>
 									</ul>
 								</article>
+								<article>
+									<header>
+										<span class="date"><br></span>
+										<h2><a href="about.html">Paper Summaries</a></h2>
+									</header>
+									
+									<a href="sum1.html">Predictive View Generation</a>
+									<br>
+									<a href="sum2.html">Motion Prediction Based Transmission</a>
+									<br>
+									<a href="sum3.html">Optimizing 360 Video Delivery</a>
+									<br>
+									<a href="sum4.html">Adaptive 360 VR Video Streaming</a>
+									<br>
+									<a href="sum5.html">Bandwidth Efficient Omnidirectional Streaming</a>
+									<br>
+									<a href="sum6.html">Motion Prediction Based Multicast</a>
+									<br>
+									<a href="sum7.html">Rotational Motion Model for Temporal Prediction</a>
+									<br>
+									<a href="sum8.html">Omnidirectional Live Streaming System</a>
+								</article>
 							</section>
 
 
