presentation and report nav added

--- a/index.html
+++ b/index.html
@@ -31,6 +31,8 @@
 						<ul class="links">
 							<li class="active"><a href="index.html">Latest</a></li>
 							<li><a href="about.html">About</a></li>
+							<li><a href="presentation.html">Presentation</a></li>
+							<li><a href="report.html">Report</a></li>
 						</ul>
 					</nav>
 
