--- a/report.html
+++ b/report.html
@@ -21,6 +21,8 @@
 					<ul class="links">
 						<li><a href="index.html">Latest</a></li>
 						<li><a href="about.html">About</a></li>
+						<li><a href="presentation.html">Presentation</a></li>
+						<li class="active"><a href="report.html">Report</a></li>
 					</ul>
 				</nav>
 
