redundant link removed

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 								<article>
 									<header>
 										<span class="date"><br></span>
-										<h2><a href="about.html">Paper Summaries</a></h2>
+										<h2>Paper Summaries</h2>
 									</header>
 									
 									<a href="sum1.html">Predictive View Generation</a>
