removed redundant names

--- a/sum6.html
+++ b/sum6.html
@@ -37,7 +37,7 @@
 								</h2>
 
 								<p>
-									Nicolaus Karamanian, CSC 499 </br>March 25th, 2020
+									March 25th, 2020
 								</p>	
 								
 								<h3>The Problem</h3>
