--- a/sum7.html
+++ b/sum7.html
@@ -36,7 +36,7 @@
 								</h2>
 
 								<p>
-									Nicolaus Karamanian, CSC 499 </br>March 27th, 2020
+									March 27th, 2020
 								</p>	
 								
 								<h3>The Problem</h3>
