--- a/presentation.html
+++ b/presentation.html
@@ -34,7 +34,9 @@
 								<center>
 									<h2>Presentation</h2>
 
-									<iframe width="1024" height="576" src="https://www.youtube.com/embed/GBdDM5h-gXY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+									<div class="iframe-container">
+										<iframe width="1024" height="576" src="https://www.youtube.com/embed/GBdDM5h-gXY" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+									</div>
 								</center>
 							</section>
 
